--- a/styles.css
+++ b/styles.css
@@ -57,6 +57,15 @@ h1 {
     width: auto;
 }
 
+.header-logo {
+    height: 60px;
+    width: auto;
+    margin-bottom: 1rem;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .subtitle {
     font-size: 24px;
     color: var(--secondary);
